# Rune-Engine

./: .gitignore  .gitmodules  README.md
RuneFramework/: CMakeLists.txt
RuneFramework/resources/df_shaders/: df_sh1.glsl
RuneFramework/src/: main.cpp  platformdetector.h  rune.h
RuneFramework/src/api/: application.h  time.h
RuneFramework/src/api/eventsystem/: event.h  eventcallback.h  eventlistener.h  eventsystem.h  windowresizedevent.h
RuneFramework/src/api/factories/: buffers.cpp  keyboard.cpp  rendering.cpp  window.cpp
RuneFramework/src/api/filesystem/: fileloader.h
RuneFramework/src/api/input/: inputcommand.h  inputmanager.cpp  inputmanager.h  keyboard.cpp  mouse.h
RuneFramework/src/api/rendering/: renderer2d.h
RuneFramework/src/api/rendering/buffers/: buffers.cpp  indexbuffer.h  vertexbuffer.h  vertexlayout.h
RuneFramework/src/api/rendering/shaders/: shaderprogram.h
RuneFramework/src/api/rendering/shapes/: rect.h  shape.h
RuneFramework/src/api/rendering/window/: window.cpp  window.h
RuneFramework/src/application/: application.h
RuneFramework/src/application/input/: inputcommand.h  inputmanager.cpp  inputmanager.h  keyboard.cpp  keyboard.h  keys.h  mouse.h
RuneFramework/src/application/input/windows/: windowskeyboard.cpp  windowskeyboard.h  windowsmouse.h
RuneFramework/src/filesystem/: fileloader.h
RuneFramework/src/rendering/: renderer2d.h
RuneFramework/src/rendering/buffers/: buffers.cpp  vertexlayout.h
RuneFramework/src/rendering/buffers/opengl/: oglindexbuffer.cpp  oglindexbuffer.h  oglvertexbuffer.h  oglvertexlayout.cpp  oglvertexlayout.h
RuneFramework/src/rendering/cameras/: camera.h
RuneFramework/src/rendering/shaders/: shaderprogram.cpp  shaderprogram.h
RuneFramework/src/rendering/shapes/: rect.h  shape.h
RuneFramework/src/rendering/window/: window.cpp  window.h
RuneFramework/src/rendering/window/windows/: windowswindow.cpp  windowswindow.h
RuneRenderer/: CMakeLists.txt
RuneRenderer/resources/df_shaders/: df_sh1.glsl
RuneRenderer/src/: main.cpp
RuneRenderer/src/application/: application.h  fileloader.h  window.cpp  window.h
RuneRenderer/src/application/input/: inputcommand.h  inputmanager.h  keyboard.h  keys.h
RuneRenderer/src/filesystem/: fileloader.h
RuneRenderer/src/shaders/: shaderprogram.cpp
RuneRenderer/src/window/: window.cpp  window.h
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/src/: main.cpp
_out/config/Release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RuneRenderer.sln  RuneRenderer.vcxproj  RuneRenderer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
_out/config/Release/RuneRenderer.dir/Release/: RuneRenderer.exe.recipe
_out/config/Release/RuneRenderer.dir/Release/RuneRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_out/config/Release/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
_out/config/Release/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
_out/config/Release/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
_scripts/: build.sh  build_and_run.sh  build_and_run_debug.sh  build_debug.sh  run.sh  run_debug.sh
